Fixed h1 overflow on window minimization

--- a/src/overlay.css
+++ b/src/overlay.css
@@ -25,10 +25,9 @@
 
 /* The drag bar */
 .bm-dragbar {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
   align-items: center;
-  flex-wrap: nowrap;
-  justify-content: space-between;
   gap: 0.5ch;
   /* For background circles, width & height should be odd, cx & cy should be half of width & height, and r should be less than or equal to cx & cy */
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="5" height="5"><circle cx="3" cy="3" r="1.5" fill="CornflowerBlue" /></svg>') repeat;
@@ -64,7 +63,6 @@
   vertical-align: middle;
 }
 
-
 /* Header 1 */
 .bm-window h1 {
   display: inline-block;
@@ -76,8 +74,10 @@
 /* Header 1 when inside dragbar */
 .bm-dragbar h1 {
   font-size: 1.2em;
-  margin-left: 0.5ch;
   user-select: none;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   text-shadow:
     3px  0px rgba(21, 48, 99, 0.5),
    -3px  0px rgba(21, 48, 99, 0.5),
@@ -87,6 +87,11 @@
    -3px  3px rgba(21, 48, 99, 0.5),
     3px -3px rgba(21, 48, 99, 0.5),
    -3px -3px rgba(21, 48, 99, 0.5);
+}
+
+/* Container for Header 1 when inside dragbar */
+.bm-dragbar div:has(h1) {
+  display: contents;
 }
 
 /* Containers for "sections" of elements */
